# huck

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/huck-engine/: Cargo.toml
crates/huck-engine/examples/: engine_capture_diff.rs  engine_sandbox_diff.rs  engine_stream_diff.rs
crates/huck-engine/src/: alias_expand.rs  arith.rs  array_transforms.rs  builtins.rs  callbacks_thread_local.rs  child_fd.rs  completion.rs  completion_builtins.rs  completion_spec.rs  continuation.rs  cwd_scope.rs  engine.rs  err_thread_local.rs  error_emit.rs  exec_builder.rs  exec_guard.rs  executor.rs  expand.rs  fd_writer.rs  glob_match.rs  history.rs  job_spec.rs  jobs.rs  lib.rs  line_buf.rs  macros.rs  param_expansion.rs  policy.rs  procsub.rs  prompt.rs  readline_bind.rs  restricted.rs  shell.rs  shell_state.rs  stdin_pipe.rs  stream_loop.rs  test_builtin.rs  test_support.rs  timeout.rs  traps.rs  (+1 more)
crates/huck-engine/src/arith/: tests.rs
crates/huck-engine/src/builtins/: alias_tests.rs  array_declare_tests.rs  assoc_declare_tests.rs  cd_pwd_tests.rs  colon_tests.rs  command_tests.rs  declare_tests.rs  dirstack_tests.rs  disown_tests.rs  enable_tests.rs  eval_tests.rs  exit_tests.rs  fg_bg_tests.rs  getopts_step_tests.rs  hash_tests.rs  help_tests.rs  history_tests.rs  integer_attr_tests.rs  kill_tests.rs  local_tests.rs  loop_levels_tests.rs  normalize_logical_tests.rs  pipefail_option_tests.rs  printf_tests.rs  read_tests.rs  readonly_tests.rs  set_options_tests.rs  set_tests.rs  shift_tests.rs  source_tests.rs  special_builtin_tests.rs  tests.rs  true_false_tests.rs  type_tests.rs  ulimit_tests.rs  umask_tests.rs
crates/huck-engine/src/child_fd/: tests.rs
crates/huck-engine/src/executor/: arith_for_tests.rs  array_assign_tests.rs  assoc_assign_tests.rs  coproc_name_tests.rs  errexit_andor_tests.rs  g3_dbracket_extglob_noshopt_tests.rs  heredoc_body_tests.rs  loop_levels_executor_tests.rs  select_menu_tests.rs  tests.rs
crates/huck-engine/tests/: exec_redirect_no_leak.rs  foreground_wait_latency.rs  forking_execution_serial.rs  jobs_reap_prune.rs  no_wildcard_reap.rs  streaming_fd_serial.rs  tee_inherit.rs
site/: .gitignore  (+6 more)
(+1145 files in other folders)
