[package]
name = "huck"
version = "0.1.0"
edition = "2024"
description = "A POSIX-ish shell written in Rust"
license = "MIT"
repository = "https://github.com/jdstanhope/huck"
homepage = "https://github.com/jdstanhope/huck"
readme = "README.md"

[dependencies]
rustyline = "18.0.0"
signal-hook = "0.4.4"
libc = "0.2"
glob = "0.3"
regex = "1.10"

[dev-dependencies]
expectrl = "0.9.0"
tempfile = "3"
libc = "0.2"
