[package]
name = "huck"
version = "0.1.0"
edition = "2024"
description = "A POSIX-ish shell written in Rust"
license = "MIT"
repository = "https://github.com/jdstanhope/huck"
homepage = "https://github.com/jdstanhope/huck"
readme = "README.md"

[workspace]
members = [".", "crates/huck-syntax", "crates/huck-engine", "crates/huck-cli"]

[dependencies]
rustyline = "18.0.0"
signal-hook = "0.4.4"
# Direct dep for `register_unchecked` (signal-hook 0.4's `low_level` only
# re-exports `register`/`unregister`). Same crate signal-hook already pulls in.
signal-hook-registry = "1.4"
libc = "0.2"
glob = "0.3"
regex = "1.10"
huck-syntax = { path = "crates/huck-syntax" }

[dev-dependencies]
expectrl = "0.9.0"
tempfile = "3"
libc = "0.2"
