[package]
name = "huck"
version = "0.2.0"
edition = "2024"
description = "A POSIX-ish shell written in Rust"
license = "MIT"
repository = "https://github.com/jdstanhope/huck"
homepage = "https://github.com/jdstanhope/huck"
readme = "README.md"

[workspace]
members = [".", "crates/huck-syntax", "crates/huck-engine", "crates/huck-cli"]

[dependencies]
huck-cli = { path = "crates/huck-cli" }

[dev-dependencies]
expectrl = "0.9.0"
tempfile = "3"
libc = "0.2"
