[package]
name = "huck-engine"
version = "0.1.0"
edition = "2024"
description = "huck's terminal-free execution core: expansion, execution, builtins, shell state"
license = "MIT"

[dependencies]
huck-syntax = { path = "../huck-syntax" }
libc = "0.2"
glob = "0.3"
regex = "1.10"
signal-hook = "0.4.4"
signal-hook-registry = "1.4"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
